--- a/resources/mobile.css
+++ b/resources/mobile.css
@@ -9,13 +9,12 @@
         width: 250px;
     }
 
-    .carousel-inner .item,
-    .myCarousel {
-        max-height: 800px;
+    .wrapper {
+        min-height: 800px;
     }
 
-    .carousel-caption h3 {
-        margin-top: 650px;
+    .slider {
+        max-height: 800px;
     }
     
     .description-thumb,
@@ -43,13 +42,12 @@
         width: 230px;
     }
 
-    .carousel-inner .item,
-    .myCarousel {
-        max-height: 500px;
+    .wrapper {
+        min-height: 500px;
     }
 
-    .carousel-caption h3 {
-        margin-top: 350px;
+    .slider {
+        max-height: 500px;
     }
 
     .description-thumb,
