--- a/resources/styles.css
+++ b/resources/styles.css
@@ -474,6 +474,62 @@ body {
   transition: none;
 }
 
+.favorite-button-carrousel {
+  display: block;
+}
+
+.favorite-checkbox {
+  display: none;
+}
+
+.favorite-button-star {
+  display: flex;
+  width: fit-content;
+  cursor: pointer;
+  align-items: center;
+  gap: 0.5rem;
+  overflow: hidden;
+  border-radius: 9999px;
+  border: 2px solid rgb(51, 51, 51);
+  fill: none;
+  padding: 0.5rem 0.75rem;
+  font-weight: 800;
+  color: rgb(154, 154, 154);
+  transition: all 0.2s ease-in-out;
+  background-color: rgb(51, 51, 51, 0.7);;
+}
+
+.favorite-button-carrousel:hover .favorite-text {
+  transform: translateX(1rem);
+}
+
+.favorite-button-carrousel:hover .favorite-icon-carrousel {
+  transform: scale(1500%) translateX(-0.2rem);
+}
+
+.favorite-button-carrousel:active .favorite-button-star {
+  transform: scale(0.9);
+}
+
+.favorite-text {
+  z-index: 10;
+  transition: transform 0.3s ease-in-out;
+}
+
+.favorite-icon-carrousel {
+  width: 1.5rem;
+  height: 1.5rem;
+  transition: all 0.5s ease-in-out;
+}
+
+.favorite-checkbox:checked + .favorite-button-star {
+  fill: rgb(255, 45, 85);
+}
+
+.favorite-checkbox:checked + .favorite-button-star:hover {
+  color: rgb(244, 244, 244);
+}
+  
 #intro {
     width: 100%;
     height: 100vh;
@@ -2153,6 +2209,8 @@ header.scrolled {
     100% { transform: rotate(360deg); }
 }
 
+#prev-video-button-season,
+#next-video-button-season,
 #prev-video-button,
 #next-video-button {
     position: absolute;
@@ -2174,6 +2232,14 @@ header.scrolled {
     pointer-events: none; 
 }
 
+#prev-video-button-season,
+#next-video-button-season {
+    background-color: rgba(255, 0, 64, 0.2);
+    background: rgb(255, 0, 64, 0.4);
+}
+
+#video-container:hover #prev-video-button-season,
+#video-container:hover #next-video-button-season,
 #video-container:hover #prev-video-button,
 #video-container:hover #next-video-button {
   opacity: 1;
@@ -2186,16 +2252,26 @@ header.scrolled {
     background: rgb(129, 134, 141, 0.5);
 }
 
+#prev-video-button-season:hover,
+#next-video-button-season:hover {
+    background-color: rgba(255, 0, 64, 0.5);
+    background: rgb(255, 0, 64, 0.5);
+}
+
+#prev-video-button-season,
 #prev-video-button {
     /* left: -80px; */
-    left: 30px;
+    left: 40px;
 }
 
+#next-video-button-season,
 #next-video-button {
     /* right: -80px; */
-    right: 30px;
+    right: 40px;
 }
 
+#prev-video-button-season:hover .tooltip-text.season,
+#next-video-button-season:hover .tooltip-text.season,
 #prev-video-button:hover .tooltip-text,
 #next-video-button:hover .tooltip-text {
     visibility: visible;
@@ -2237,6 +2313,23 @@ header.scrolled {
 }
 .tooltip-bottom.black::after{
     border-bottom: 5px solid rgba(47, 49, 54, 0.8);
+}
+
+.tooltip-text.season {
+    background-color: rgba(255, 0, 64, 0.8);
+    background: rgba(255, 0, 64, 0.8);
+}
+.tooltip-top.season::after {
+    border-top: 5px solid rgba(255, 0, 64, 0.8);
+}
+.tooltip-left.season::after{
+    border-right: 5px solid rgba(255, 0, 64, 0.8);
+}
+.tooltip-right.season::after{
+    border-left: 5px solid rgba(255, 0, 64, 0.8);
+}
+.tooltip-bottom.season::after{
+    border-bottom: 5px solid rgba(255, 0, 64, 0.8);
 }
 
 .tooltip-top {
