--- a/resources/styles.css
+++ b/resources/styles.css
@@ -124,15 +124,18 @@ body {
   align-items: center;
   /* gap: 8px; */
   border: 1px solid rgb(51, 51, 51);
-  background: rgb(34, 34, 34);
-  color: rgb(207, 207, 207);
   padding: 4px 8px;
   font-size: 12px;
   border-radius: 999px;
   /* min-width: 0; */
   max-width: fit-content;
+
+  background: linear-gradient(to right, rgb(51, 51, 51) 0%, rgb(34, 34, 34) 80%);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  color: #fff;
 }
 
+.chip.badge,
 .chip.movies,
 .chip.episodes,
 .chip.seasons { 
@@ -141,8 +144,11 @@ body {
   letter-spacing: 0.06em; 
 }
 
+
 .chip.new { 
-  background: rgb(255, 45, 85); 
+  background: linear-gradient(to right, rgb(255, 2, 102) 0%, rgb(187, 0, 73) 80%);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  color: #fff;
   text-transform: uppercase; 
   font-weight: 700; 
   letter-spacing: 0.06em; 
