--- a/resources/styles.css
+++ b/resources/styles.css
@@ -732,6 +732,7 @@ header.scrolled {
   background-position: center !important;
 }
 
+.effect-layer,
 .description-thumb {
   position: absolute;
   top: 0; left: 0;
@@ -751,6 +752,7 @@ header.scrolled {
   width: 100%;  
   height: 100%;
   background: linear-gradient(90deg,rgb(21, 24, 34) 0%, rgba(27, 29, 34, 0) 100%);
+  background: linear-gradient(90deg,rgb(21, 24, 34) 0%, rgba(27, 29, 34, 0) 50%);
   pointer-events: none;
   z-index: 2;
 }
@@ -761,6 +763,12 @@ header.scrolled {
   padding: 11vw 7vw 10vw 6vw;
   width: calc(700px + 10vw);
   text-shadow: 0.2vw 0.2vw 0.5vw rgba(0, 0, 0, 0.8);
+}
+
+#series-description .description-thumb .effect-layer video,
+#series-description .description-thumb .effect-layer img {
+  width: 100%; height: 100%; object-fit: cover;
+  opacity: 0; will-change: opacity;
 }
 
 .description-content h2 { margin: 0 0 8px; font-size: 2em; }
